--- a/httpd.conf
+++ b/httpd.conf
@@ -177,7 +177,7 @@ ServerAdmin admin@localhost
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "D:\mysite1\mysite1"
+DocumentRoot "D:/mysite1/mysite1"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -268,7 +268,8 @@ Require all granted
 # container, that host's errors will be logged there and not here.
 #
 ErrorLog "logs/error.log"
-WSGIScriptAlias / "D:\mysite1\mysite1"
+WSGIPythonPath D:/mysite1"
+WSGIScriptAlias / "D:/mysite1/mysite1/"
 #
 # LogLevel: Control the number of messages logged to the error_log.
 # Possible values include: debug, info, notice, warn, error, crit,
